# iconv

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  aclocal.m4  configure  configure.ac  rebar.config  rebar.config.in  rebar.config.script  vars.config.in
.github/workflows/: ci.yml  hexpm-release.yml
c_src/: Makefile  iconv.c  iconv_erl.c
src/: iconv.app.src  iconv.erl  iconv_app.erl  iconv_sup.erl  p1_iconv.app.src
test/: unload_test.erl
